--- a/myStyle.css
+++ b/myStyle.css
@@ -67,3 +67,28 @@ footer {
 	margin-top: 10px;
 	position: static;
 }
+
+fieldset {
+	background-color: rgba(255,255,255,0.5); /*ivory; lightsteel­blue; lightcyan; ivory;*/
+	/*opacity: 0.5;*/
+	width: 400px;
+	margin: 0 auto;
+	margin-top: 50px;
+	border-radius: 15px;
+	text-align: center;
+}
+
+legend {
+	/*font-family: "Courier New", Courier, monospace;*/
+	font-size: 18px; 
+}
+
+em {
+	color: red;
+}
+
+input {
+	margin: 0 auto;
+	display: block;
+	margin-top: 5px;
+}
